// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`migrate init for ember app variant > ember3-app > default run --ember3-app 1`] = `
"[STARTED] Validate project
[SUCCESS] Validate project
[STARTED] Initialize
[DATA] Setting up config for app-template
[SUCCESS] Initialize
[STARTED] Install dependencies
[DATA] Installing devDependencies: @types/node, @typescript-eslint/eslint-plugin, @typescript-eslint/parser, eslint, eslint-config-prettier, eslint-plugin-prettier, prettier, typescript
[SUCCESS] Install dependencies
[STARTED] Create tsconfig.json
[SUCCESS] Create tsconfig.json
[STARTED] Create eslint config
[DATA] Create .eslintrc.js, extending Rehearsal default eslint-related config
[SUCCESS] Create eslint config
[STARTED] Add package scripts
[DATA] Adding \\"lint:tsc\\" script in package.json
[SUCCESS] Add package scripts
info:    The project is ready for migration. Please run \\"rehearsal migrate\\" to start the migration."
`;

exports[`migrate init for ember app variant > ember3-app > default run --ember3-app 2`] = `
"module.exports = {
  extends: [\\"./.rehearsal-eslintrc.js\\"],
};
"
`;

exports[`migrate init for ember app variant > ember3-app > default run --ember3-app 3`] = `
"module.exports = {
  \\"parser\\": \\"@typescript-eslint/parser\\",
  \\"parserOptions\\": {
    \\"sourceType\\": \\"module\\"
  },
  \\"plugins\\": [
    \\"@typescript-eslint\\",
    \\"prettier\\"
  ],
  \\"extends\\": [
    \\"plugin:@typescript-eslint/eslint-recommended\\",
    \\"plugin:@typescript-eslint/recommended\\",
    \\"eslint:recommended\\",
    \\"plugin:prettier/recommended\\",
    \\"prettier\\"
  ]
}"
`;

exports[`migrate init for ember app variant > ember3-app > default run --ember3-app 4`] = `
{
  "$schema": "https://json.schemastore.org/tsconfig",
  "compilerOptions": {
    "esModuleInterop": true,
    "forceConsistentCasingInFileNames": true,
    "module": "es2020",
    "moduleResolution": "node",
    "newLine": "lf",
    "noEmit": true,
    "noFallthroughCasesInSwitch": true,
    "noUncheckedIndexedAccess": true,
    "strict": true,
    "target": "ES2021",
  },
}
`;

exports[`migrate init for ember app variant > ember3-app > pass user config ember3-app 1`] = `
"[STARTED] Validate project
[SUCCESS] Validate project
[STARTED] Initialize
[DATA] Setting up config for app-template
[SUCCESS] Initialize
[STARTED] Install dependencies
[DATA] Install dependencies from config
[DATA] Installing dependecies: fs-extra
[DATA] Installing devDependencies: @types/node, @typescript-eslint/eslint-plugin, @typescript-eslint/parser, eslint, eslint-config-prettier, eslint-plugin-prettier, prettier, typescript, tmp
[SUCCESS] Install dependencies
[STARTED] Create tsconfig.json
[DATA] Create tsconfig from config
[SUCCESS] Create tsconfig.json
[STARTED] Create eslint config
[DATA] Create .eslintrc.js from config
[SUCCESS] Create eslint config
[STARTED] Add package scripts
[DATA] Adding \\"lint:tsc\\" script in package.json
[SUCCESS] Add package scripts
info:    The project is ready for migration. Please run \\"rehearsal migrate\\" to start the migration."
`;

exports[`migrate init for ember app variant > ember3-app > skip dep install, ts config, and lint config if exists 1`] = `
"[STARTED] Validate project
[SUCCESS] Validate project
[STARTED] Initialize
[DATA] Setting up config for app-template
[SUCCESS] Initialize
[STARTED] Install dependencies
[SKIPPED] Install dependencies
[STARTED] Create tsconfig.json
[SKIPPED] Create tsconfig.json
[STARTED] Create eslint config
[SKIPPED] Create eslint config
[STARTED] Add package scripts
[DATA] Adding \\"lint:tsc\\" script in package.json
[SUCCESS] Add package scripts
info:    The project is ready for migration. Please run \\"rehearsal migrate\\" to start the migration."
`;

exports[`migrate init for ember app variant > ember3-appWithInRepoAddon > default run --ember3-appWithInRepoAddon 1`] = `
"[STARTED] Validate project
[SUCCESS] Validate project
[STARTED] Initialize
[DATA] Setting up config for app-template
[SUCCESS] Initialize
[STARTED] Install dependencies
[DATA] Installing devDependencies: @types/node, @typescript-eslint/eslint-plugin, @typescript-eslint/parser, eslint, eslint-config-prettier, eslint-plugin-prettier, prettier, typescript
[SUCCESS] Install dependencies
[STARTED] Create tsconfig.json
[SUCCESS] Create tsconfig.json
[STARTED] Create eslint config
[DATA] Create .eslintrc.js, extending Rehearsal default eslint-related config
[SUCCESS] Create eslint config
[STARTED] Add package scripts
[DATA] Adding \\"lint:tsc\\" script in package.json
[SUCCESS] Add package scripts
info:    The project is ready for migration. Please run \\"rehearsal migrate\\" to start the migration."
`;

exports[`migrate init for ember app variant > ember3-appWithInRepoAddon > default run --ember3-appWithInRepoAddon 2`] = `
"module.exports = {
  extends: [\\"./.rehearsal-eslintrc.js\\"],
};
"
`;

exports[`migrate init for ember app variant > ember3-appWithInRepoAddon > default run --ember3-appWithInRepoAddon 3`] = `
"module.exports = {
  \\"parser\\": \\"@typescript-eslint/parser\\",
  \\"parserOptions\\": {
    \\"sourceType\\": \\"module\\"
  },
  \\"plugins\\": [
    \\"@typescript-eslint\\",
    \\"prettier\\"
  ],
  \\"extends\\": [
    \\"plugin:@typescript-eslint/eslint-recommended\\",
    \\"plugin:@typescript-eslint/recommended\\",
    \\"eslint:recommended\\",
    \\"plugin:prettier/recommended\\",
    \\"prettier\\"
  ]
}"
`;

exports[`migrate init for ember app variant > ember3-appWithInRepoAddon > default run --ember3-appWithInRepoAddon 4`] = `
{
  "$schema": "https://json.schemastore.org/tsconfig",
  "compilerOptions": {
    "esModuleInterop": true,
    "forceConsistentCasingInFileNames": true,
    "module": "es2020",
    "moduleResolution": "node",
    "newLine": "lf",
    "noEmit": true,
    "noFallthroughCasesInSwitch": true,
    "noUncheckedIndexedAccess": true,
    "strict": true,
    "target": "ES2021",
  },
}
`;

exports[`migrate init for ember app variant > ember3-appWithInRepoAddon > pass user config ember3-appWithInRepoAddon 1`] = `
"[STARTED] Validate project
[SUCCESS] Validate project
[STARTED] Initialize
[DATA] Setting up config for app-template
[SUCCESS] Initialize
[STARTED] Install dependencies
[DATA] Install dependencies from config
[DATA] Installing dependecies: fs-extra
[DATA] Installing devDependencies: @types/node, @typescript-eslint/eslint-plugin, @typescript-eslint/parser, eslint, eslint-config-prettier, eslint-plugin-prettier, prettier, typescript, tmp
[SUCCESS] Install dependencies
[STARTED] Create tsconfig.json
[DATA] Create tsconfig from config
[SUCCESS] Create tsconfig.json
[STARTED] Create eslint config
[DATA] Create .eslintrc.js from config
[SUCCESS] Create eslint config
[STARTED] Add package scripts
[DATA] Adding \\"lint:tsc\\" script in package.json
[SUCCESS] Add package scripts
info:    The project is ready for migration. Please run \\"rehearsal migrate\\" to start the migration."
`;

exports[`migrate init for ember app variant > ember3-appWithInRepoAddon > skip dep install, ts config, and lint config if exists 1`] = `
"[STARTED] Validate project
[SUCCESS] Validate project
[STARTED] Initialize
[DATA] Setting up config for app-template
[SUCCESS] Initialize
[STARTED] Install dependencies
[SKIPPED] Install dependencies
[STARTED] Create tsconfig.json
[SKIPPED] Create tsconfig.json
[STARTED] Create eslint config
[SKIPPED] Create eslint config
[STARTED] Add package scripts
[DATA] Adding \\"lint:tsc\\" script in package.json
[SUCCESS] Add package scripts
info:    The project is ready for migration. Please run \\"rehearsal migrate\\" to start the migration."
`;

exports[`migrate init for ember app variant > ember3-appWithInRepoEngine > default run --ember3-appWithInRepoEngine 1`] = `
"[STARTED] Validate project
[SUCCESS] Validate project
[STARTED] Initialize
[DATA] Setting up config for app-template
[SUCCESS] Initialize
[STARTED] Install dependencies
[DATA] Installing devDependencies: @types/node, @typescript-eslint/eslint-plugin, @typescript-eslint/parser, eslint, eslint-config-prettier, eslint-plugin-prettier, prettier, typescript
[SUCCESS] Install dependencies
[STARTED] Create tsconfig.json
[SUCCESS] Create tsconfig.json
[STARTED] Create eslint config
[DATA] Create .eslintrc.js, extending Rehearsal default eslint-related config
[SUCCESS] Create eslint config
[STARTED] Add package scripts
[DATA] Adding \\"lint:tsc\\" script in package.json
[SUCCESS] Add package scripts
info:    The project is ready for migration. Please run \\"rehearsal migrate\\" to start the migration."
`;

exports[`migrate init for ember app variant > ember3-appWithInRepoEngine > default run --ember3-appWithInRepoEngine 2`] = `
"module.exports = {
  extends: [\\"./.rehearsal-eslintrc.js\\"],
};
"
`;

exports[`migrate init for ember app variant > ember3-appWithInRepoEngine > default run --ember3-appWithInRepoEngine 3`] = `
"module.exports = {
  \\"parser\\": \\"@typescript-eslint/parser\\",
  \\"parserOptions\\": {
    \\"sourceType\\": \\"module\\"
  },
  \\"plugins\\": [
    \\"@typescript-eslint\\",
    \\"prettier\\"
  ],
  \\"extends\\": [
    \\"plugin:@typescript-eslint/eslint-recommended\\",
    \\"plugin:@typescript-eslint/recommended\\",
    \\"eslint:recommended\\",
    \\"plugin:prettier/recommended\\",
    \\"prettier\\"
  ]
}"
`;

exports[`migrate init for ember app variant > ember3-appWithInRepoEngine > default run --ember3-appWithInRepoEngine 4`] = `
{
  "$schema": "https://json.schemastore.org/tsconfig",
  "compilerOptions": {
    "esModuleInterop": true,
    "forceConsistentCasingInFileNames": true,
    "module": "es2020",
    "moduleResolution": "node",
    "newLine": "lf",
    "noEmit": true,
    "noFallthroughCasesInSwitch": true,
    "noUncheckedIndexedAccess": true,
    "strict": true,
    "target": "ES2021",
  },
}
`;

exports[`migrate init for ember app variant > ember3-appWithInRepoEngine > pass user config ember3-appWithInRepoEngine 1`] = `
"[STARTED] Validate project
[SUCCESS] Validate project
[STARTED] Initialize
[DATA] Setting up config for app-template
[SUCCESS] Initialize
[STARTED] Install dependencies
[DATA] Install dependencies from config
[DATA] Installing dependecies: fs-extra
[DATA] Installing devDependencies: @types/node, @typescript-eslint/eslint-plugin, @typescript-eslint/parser, eslint, eslint-config-prettier, eslint-plugin-prettier, prettier, typescript, tmp
[SUCCESS] Install dependencies
[STARTED] Create tsconfig.json
[DATA] Create tsconfig from config
[SUCCESS] Create tsconfig.json
[STARTED] Create eslint config
[DATA] Create .eslintrc.js from config
[SUCCESS] Create eslint config
[STARTED] Add package scripts
[DATA] Adding \\"lint:tsc\\" script in package.json
[SUCCESS] Add package scripts
info:    The project is ready for migration. Please run \\"rehearsal migrate\\" to start the migration."
`;

exports[`migrate init for ember app variant > ember3-appWithInRepoEngine > skip dep install, ts config, and lint config if exists 1`] = `
"[STARTED] Validate project
[SUCCESS] Validate project
[STARTED] Initialize
[DATA] Setting up config for app-template
[SUCCESS] Initialize
[STARTED] Install dependencies
[SKIPPED] Install dependencies
[STARTED] Create tsconfig.json
[SKIPPED] Create tsconfig.json
[STARTED] Create eslint config
[SKIPPED] Create eslint config
[STARTED] Add package scripts
[DATA] Adding \\"lint:tsc\\" script in package.json
[SUCCESS] Add package scripts
info:    The project is ready for migration. Please run \\"rehearsal migrate\\" to start the migration."
`;
